# studlan

./: .dockerignore  .drone.yml  .drone.yml.sig  .flake8  .gitignore  .sonarcloud.properties  .travis.yml  CHANGELOG.md  CONTRIBUTORS  Dockerfile  MAINTAINERS  Makefile  README.md  README.postgres.md  SECURITY.md  VERSION  Vagrantfile  buildtools-replacement-notes.txt  docker-compose.yml  docker-entrypoint.sh  flake.nix  manage.py  pyproject.toml  requirements.txt  sonar-project.properties  tox.ini  uwsgi.ini  vagrantbootstrap.sh
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
docs/: deployment.md  development.md  docker-image.md  releasing.md
keys/: ssh_deploy.key.enc  ssh_deploy.pub  studlan.key.enc
manage/: activate-venv.sh  check-deps.sh  check.sh  ci-analyze-source.sh  ci-deploy-registry.sh  ci-show-outdated-deps.sh  ci-test.sh  ci-validate-django.sh  ci-validate-docker.sh  clean-all.sh  clean-lightly.sh  clean.sh  deploy-ci.sh  deploy-registry-ci.sh  deploy-travis.sh  docker-entrypoint.sh  enter-venv.sh  lint.sh  make-migrations.sh  make-translations.sh  manage.sh  run-all-checks.sh  run-dev-docker.sh  run-dev-venv.sh  run-dev.sh  run-docker-dev.sh  run-full-test.sh  run-linter.sh  run-simple-test.sh  run-test-venv.sh  run-tests.sh  run.sh  setup-base-venv.sh  setup-base.sh  setup-dev-venv.sh  setup-dev.sh  setup-prod.sh  setup-test-venv.sh  setup-test.sh  setup.sh  (+3 more)
requirements/: .dockerignore  .gitignore  all.in  all.txt  base.in  base.txt  development.in  development.txt  production.in  production.txt  requirements.txt  (+2 more)
(+637 files in other folders)
